--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.cgmconcept.SteelDrawing"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:windowSoftInputMode="stateUnchanged"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
