--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.cgmconcept.SteelDrawing"
+            android:name="com.cgmconcept.SteelDrawingActivity"
             android:label="@string/app_name" 
             android:windowSoftInputMode="stateUnchanged"
             >
