--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=../android-saripaar
+android.library.reference.1=..\\android-saripaar
+android.library.reference.2=../../../android-sdks/extras/android/support/v7/gridlayout
