--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,6 +24,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name="com.cgmconcept.ConfirmData"
+            android:label="@string/confirm" 
+            ></activity>
     </application>
-
+    
 </manifest>
