--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,10 +14,10 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:screenOrientation="portrait"
             android:name="com.cgmconcept.SteelDrawingActivity"
             android:label="@string/app_name" 
-            android:windowSoftInputMode="stateUnchanged"
-            >
+            android:windowSoftInputMode="stateUnchanged">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,14 +27,15 @@
         
         
 	<activity
-            
+        android:screenOrientation="portrait"    
 	    android:name="com.cgmconcept.ConfirmDataActivity"
             	    android:label="@string/confirm">
 	</activity>
         
         
-	<activity android:name="com.cgmconcept.ShowResultsActivity">
-       	</activity>
+	<activity android:name="com.cgmconcept.ShowResultsActivity"
+	          android:screenOrientation="landscape">
+    </activity>
         
 	</application>
     
