--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ gen/
 
 # Local configuration file (sdk path, etc)
 local.properties
-.settings
+.settings/
 project.properties
 
 # Eclipse project files
