--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,6 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:screenOrientation="portrait"
             android:name="com.cgmconcept.SteelDrawingActivity"
             android:label="@string/app_name" 
             android:windowSoftInputMode="stateUnchanged">
@@ -27,14 +26,12 @@
         
         
 	<activity
-        android:screenOrientation="portrait"    
 	    android:name="com.cgmconcept.ConfirmDataActivity"
             	    android:label="@string/confirm">
 	</activity>
         
         
-	<activity android:name="com.cgmconcept.ShowResultsActivity"
-	          android:screenOrientation="landscape">
+	<activity android:name="com.cgmconcept.ShowResultsActivity">
     </activity>
         
 	</application>
