Add async for taperCalculation

--- a/.settings/org.eclipse.jdt.apt.core.prefs
+++ b/.settings/org.eclipse.jdt.apt.core.prefs
@@ -1,4 +1,4 @@
-#Sat Feb 15 13:14:05 GMT 2014
+#Sun Apr 06 11:09:34 BST 2014
 eclipse.preferences.version=1
 org.eclipse.jdt.apt.aptEnabled=true
 org.eclipse.jdt.apt.genSrcDir=.apt_generated
